Clean up.